Actions
Bug #14333
closedlibsmedia: this 'if' clause does not guard...
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with gcc 11:
../common/b_generic.c: In function '_m_get_device_info': ../common/b_generic.c:153:9: error: this 'if' clause does not guard... [-Werror=misleading-indentation] 153 | if (!errno) | ^~ ../common/b_generic.c:155:17: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'if' 155 | return (-1); | ^~~~~~ cc1: all warnings being treated as errors
Testing done: wsdiff is only reporting ascii, .debug_info and .debug_line difference.
Updated by Electric Monk 7 months ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 430062b0bc38ddbe5eda3921705af71cd2c44260
commit 430062b0bc38ddbe5eda3921705af71cd2c44260 Author: Toomas Soome <tsoome@me.com> Date: 2022-01-04T20:35:25.000Z 14333 libsmedia: this 'if' clause does not guard... Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions